Add ctqwalk.R + utils.R and basic config files

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: qwalkr
-Title: What the Package Does (One Line, Title Case)
+Title: Handle Continuous-Time Quantum Walks with R
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Vitor", "Marques", email="vmrodriguespro@gmail.com", role = c("aut", "cre"))
+Description: Functions and methods to create, visualize, and investigate properties of
+   Continous-Time Quantum Walks. In addition, functions to efficiently calculate linear 
+   algebra objects that arise in the context of Quantum Walks.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
