+ time_evolution.R and add method unitary_matrix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,11 @@ S3method(act_eigfun,spectral)
 S3method(get_eigproj,spectral)
 S3method(get_eigschur,spectral)
 S3method(get_eigspace,spectral)
+S3method(unitary_matrix,ctqwalk)
 export(act_eigfun)
 export(ctqwalk)
 export(get_eigproj)
 export(get_eigschur)
 export(get_eigspace)
 export(spectral)
+export(unitary_matrix)
