--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ S3method(act_eigfun,spectral)
 S3method(get_eigproj,spectral)
 S3method(get_eigschur,spectral)
 S3method(get_eigspace,spectral)
+S3method(mixing_matrix,ctqwalk)
 S3method(unitary_matrix,ctqwalk)
 export(act_eigfun)
 export(ctqwalk)
 export(get_eigproj)
 export(get_eigschur)
 export(get_eigspace)
+export(mixing_matrix)
 export(spectral)
 export(unitary_matrix)
