Add method gavg_matrix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(act_eigfun,spectral)
 S3method(avg_matrix,ctqwalk)
+S3method(gavg_matrix,ctqwalk)
 S3method(get_eigproj,spectral)
 S3method(get_eigschur,spectral)
 S3method(get_eigspace,spectral)
@@ -10,6 +11,7 @@ S3method(unitary_matrix,ctqwalk)
 export(act_eigfun)
 export(avg_matrix)
 export(ctqwalk)
+export(gavg_matrix)
 export(get_eigproj)
 export(get_eigschur)
 export(get_eigspace)
