+ matrices.R and add J, tr, trdot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(get_eigschur,spectral)
 S3method(get_eigspace,spectral)
 S3method(mixing_matrix,ctqwalk)
 S3method(unitary_matrix,ctqwalk)
+export(J)
 export(act_eigfun)
 export(avg_matrix)
 export(ctqwalk)
@@ -17,4 +18,6 @@ export(get_eigschur)
 export(get_eigspace)
 export(mixing_matrix)
 export(spectral)
+export(tr)
+export(trdot)
 export(unitary_matrix)
