--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(unitary_matrix,ctqwalk)
 export(J)
 export(act_eigfun)
 export(avg_matrix)
+export(cartesian)
 export(ctqwalk)
 export(gavg_matrix)
 export(get_eigproj)
