Add a print method for ctqwalk objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(get_eigproj,spectral)
 S3method(get_eigschur,spectral)
 S3method(get_eigspace,spectral)
 S3method(mixing_matrix,ctqwalk)
+S3method(print,ctqwalk)
 S3method(unitary_matrix,ctqwalk)
 export(J)
 export(act_eigfun)
